fail_crate/tests/into_iter_unknown_item.rs
use inew::New;

#[derive(New)]
struct A {
    #[new(into_iter)]
    x: u32
}

fn main() {}
